[package]
name = "jumia"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.21"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["rt-multi-thread"] }
serde_json = "1.0.79"

[dependencies.serenity]
version = "0.10.10"
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "unstable_discord_api", "rustls_backend"]
